Fixed margins and padding on mobile faq and about pages

--- a/css/main.css
+++ b/css/main.css
@@ -181,16 +181,16 @@ header .header-divider {
 }
 
 header nav {
-  width: 60%;
+  width: 100%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
 header nav ul {
-  width: 60%;
+  width: 50%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 20px 0;
   padding: 0;
@@ -411,7 +411,7 @@ input[type=button] {
 .map figure {
   width: 100%;
   height: 0;
-  padding-bottom: 80%;
+  padding-bottom: 125%;
   overflow: hidden;
   position: relative;
 }
@@ -446,6 +446,9 @@ input[type=button] {
   flex-basis: 100%
 }
 
+.contact-content p, .contact-details p {
+  margin: 0;
+}
 /* -------------------- Base Mobile Styles - FAQ Page -------------------- */
 
 /* FAQ STYLES */
